# github-rest-cli

./: .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.py  github-rest-api.py  github_rest_api.py  justfile  pyproject.toml  requirements.txt  settings.toml
.github/: dependabot.yml
.github/workflows/: pull-request.yml  python-ci.yml  python-pull-request.yml  release.yml  temp.yml
docs/: authentication.md  cli.md  configuration.md
src/github_rest_api/: __init__.py  main.py
src/github_rest_cli/: api.py  config.py  globals.py  main.py  parser.py  utils.py
tests/: test_api.py  test_api_commands.py  test_cli_dependabot.py  test_cli_smoke.py  test_config.py  test_delete_repo.py  test_utils.py
